# actix-backend

./: .env  .gitignore  Cargo.toml  README.md  database.sql  docker-compose.yaml  run.sh  spinner.sh  sql_dump_info.txt
src/: auth.rs  config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
