[package]
name = "actix-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = { version = "1.0.123", features = ["derive"] }
dotenv = "0.15.0"
config = "0.11.0"